Changes based on my understanding to existing solutions.